--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'recoleta-light';
+    font-family: 'recoleta-light', serif;
     src   url('https://raw.githubusercontent.com/thatvistuagain/blogsinhojas/blob/main/Recoleta-Light.woff') format('woff');
     font-weight: 100;
     font-style: normal;
